...
            android:textSize="30sp" />
    </RelativeLayout>


    <RelativeLayout

        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:gravity="center_vertical" >


...
